ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
    - http:
        paths:     
          - pathType: Prefix
            path: /api/kafka
            backend:
              service:
                name: producer-service
                port:
                  number: 8080

          - pathType: Prefix
            path: /api/BankCards
            backend:
              service:
                name: card-api
                port:
                  number: 8080

          - pathType: Prefix
            path: /api/Consumer/readmessage
            backend:
              service:
                name: card-api
                port:
                  number: 8080
